some fixes + add picture

--- a/index.html
+++ b/index.html
@@ -2,50 +2,104 @@
 <html>
   <head>
     <title>Aline</title>
-    <style type="text/css"></style>
+
+    <style type="text/css">
+      
+    * {
+      font-family: sans-serif;
+    }
+
+    body {
+      max-width: 1200px;
+      margin: 120px auto;
+    }
+
+    h1:before {
+      content: ' ';
+      display: inline-block;
+      height: 120px;
+      width: 120px;
+      background-image: url(./aline-pro.jpg);
+      background-position: center;
+      background-size: 100%;
+      border-radius: 50%;
+    }
+
+
+    </style>
   </head>
   <body>
-    CV Aline Paschoalino Av Duque de Loule, 90 ▪ 1050-092 ▪ Lisbon +351 963 695
-    361 alinepaschoalino@gmail.com linkedin.com/in/alinepaschoalino 03.11.1986,
-    Brazilian
+    <h1>Aline Paschoalino</h1>
 
-    <h1>CURRICULUM VITAE</h1>
-    <h2>PERSONAL STATEMENT.</h2>
+    <ul>
+      <li>Born 03.11.1986, Brazilian</li>
 
-    Specialist in Environmental Project Management and Business in the Energy
-    Sector with more than 9 years experience in public and private sectors.<br />
+      <li><address>Av Duque de Loule, 90, 1050-092, Lisbon</address></li>
+      <li><code>+351 963 695</code></li>
+      <li>
+        <a href="mailto:alinepaschoalino@gmail.com">alinepaschoalino@gmail.com</a>
+      </li>
+      <li>
+        <a href="https://linkedin.com/in/alinepaschoalino"
+          >linkedin.com/in/alinepaschoalino</a
+        >
+      </li>
+    </ul>
+
+    <h2>PERSONAL STATEMENT</h2>
+
+    <div id="personal-statement">
+    Specialist in Environmental <b>Project Management</b> and Business in the Energy
+    Sector with more than 9 years experience in public and private sectors.
+
+    <br />
     Large experience in business and agreements for packing sector and solid
     urban waste diagnostics, selection/monitoring deliveries and budgets,
-    schedules, construction and equipment purchase.<br />
-    Competencies in GRS, auditing, research, content management, communication,
-    sustainability/social responsibility, health and safety.
+    schedules, construction and equipment purchase.
 
-    <h2>WORK EXPERIENCE</h2>
+    <br />
+    Competences in auditing, research, content management, communication,
+    sustainability and social responsibilities, health and safety.
+    </div>
+
+    <h2>CURRICULUM VITAE</h2>
+
+    <h3>WORK EXPERIENCE</h3>
 
     <li>
-      Set 2019 - Present day Accenture, Multinational Company, Lisbon, Portugal
-      - Digital Project Analyst: Content control and filtering based on
+      Set 2019 - Present day (2 years)
+
+      Accenture Multinational Company, Lisbon, Portugal
+
+      Digital Project Analyst: Content control and filtering based on
       predefined policies by the client
     </li>
     <li>
-      Jun 2008 - Set 2017 CEMPRE, ONG - Third Sector, São Paulo, Brazil: Project
-      Manager: Social and environmental management, projects and research in
-      selective collection and recycling of solid waste nationwide (Brazil)
-    </li>
-    <li>
+      Jun 2008 - Set 2017 (9 years)
+
+      CEMPRE ONG - Third Sector, São Paulo, Brazil
+
+      Project Manager: Social and environmental management, projects and research in
+      selective collection and recycling of solid waste nationwide (Brazil).
+
       Workshops, training and consulting for companies such as Unilever, Nestlé,
       SIG, Coca-Cola, Tetra Pak, Vigor, Ajinomoto, Arcor, Hershey's, Gerdau and
-      many others. Research, classes and workshops on sustainability and solid
+      many others.
+
+      Research, classes and workshops on sustainability and solid
       and urban waste to general public
     </li>
-    <li>Mar 2013 GPTW, Business Consulting, São Paulo, Brazil</li>
     <li>
-      Jul 2015 Freelancer: Assessment and auditing good practice content -
+      Mar 2013, Jul 2015 (1 month each)
+
+      GPTW, Business Consulting, São Paulo, Brazil
+
+      Freelancer: Assessment and auditing good practice content -
       Culture Audict - C.A for the ÉPOCA magazine ranking of the best companies
       to work for in Brazil
     </li>
 
-    <h2>EDUCATION AND TRAINING</h2>
+    <h3>EDUCATION AND TRAINING</h3>
 
     2018-2021 Masters of Globalization, Society and Territory - University of
     Lisbon - IGOT, Lisbon, Portugal <br />
@@ -59,7 +113,7 @@
     2012- 2014 Postgraduate Lato Sensu in Environmental Management and Business
     in the Energy Sector - IEE - USP, São Paulo, Brazil
 
-    <h2>PERSONAL SKILLS</h2>
+    <h3>PERSONAL SKILLS</h3>
     <ul>
       <li><b>Portuguese</b> Mother tongue</li>
       <li><b>English</b> Advanced</li>
@@ -67,22 +121,24 @@
       <li>
         <b>Communication</b>
         Excellent
-        <i>
-          (acquired through professional experience as a speaker and teacher)
-        </i>
+        <i> (acquired through professional experience as a speaker and teacher) </i>
       </li>
       <li>
-        <b> Management</b> Implementation of quality control process Good
-        knowledge of <code>SCRUM</code>, <code>PowerBI</code>
+        <b>Tools</b>
+        <code>MS Office</code> including <code>PowerBI</code>
       </li>
       <li>
-        Good skills on MS Windows and MS Office Internet from the user's
-        perspective Job-related skills
+        <b>Management</b>
+        <ul>
+          <li>Implementation of quality control processes</li>
+          <li>Knowledge of <code>SCRUM</code> and <code>Agile</code></li>
+          <li>Strong perspicacity and empathy</li>
+          <li>High cognitive balance vs. emotional</li>
+        </ul>
       </li>
-      <li>Strong perspicacity and empathy</li>
-      <li>High cognitive balance vs. emotional</li>
     </ul>
-    <h2>PERSONAL ACHIEVEMENTS</h2>
+
+    <h3>PERSONAL ACHIEVEMENTS</h3>
     Awards Environmental Commander of the Hydromineral Tourist Resort of São
     Lourenço das Águas - Minas Gerais, Brazil, 2015
 
