--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         margin-right: 1em;
         border: 8px solid white;
         box-shadow: 0 0 20px -10px;
+        flex-shrink: 0;
       }
+
       address {
         display: inline-block;
       }
@@ -100,8 +102,23 @@
         padding: 1em;
         border-radius: 1em;
       }
+
       #personal-card li {
+        white-space: nowrap;
         list-style: none;
+      }
+
+      @media only screen and (max-width: 820px)  {
+
+        #personal-card {
+          display: flex;
+          flex-direction: column;
+        }
+
+        #personal-card ul {
+          margin-top: 3em;
+        }
+
       }
 
       @media print {
@@ -130,8 +147,7 @@
         <li>👶 Born 03.11.1986, 🇧🇷 Brazilian</li>
 
         <li>
-          🏠
-          <address>Av Duque de Loule, 90, 1050-092, Lisbon</address>
+          <address>🏠 Av Duque de Loule, 90, 1050-092, Lisbon</address>
         </li>
         <li>
           📞
